Findbugs cleanup