@@ -113,7 +113,7 @@ public class AnnotationHyperlinkDetector implements IHyperlinkDetector {
 				} else if (p2.getLength() > p1.getLength()) {
 					return 1;
 				}
-				return new Integer(System.identityHashCode(p1)).compareTo(System.identityHashCode(p2));
+				return Integer.valueOf(System.identityHashCode(p1)).compareTo(System.identityHashCode(p2));
 			}
 		}
 
@@ -123,7 +123,6 @@ public class AnnotationHyperlinkDetector implements IHyperlinkDetector {
 	 * A hyperlink implementation that causes the viewer's selection (and scrolling) to adjust to the hyperlink target.
 	 * 
 	 * @author David Green
-	 * 
 	 */
 	protected static class DocumentHyperlink implements IHyperlink {
 
